# llmops-sre-copilot

./: .gitignore  README.md
.github/workflows/: cd.yml  pull-request.yml
infras/: airflow.env  docker-compose.yml  langfuse.env
infras/airflow/: Dockerfile
infras/configs/: grafana-datasources.yaml  loki-config.yml  prometheus.yml  tempo.yaml
reports/: REPORT.md
sre-copilot/: Dockerfile  docker-compose.yml  example.env  pyproject.toml  run.py
sre-copilot/src/sre_copilot/: __init__.py  app.py  config.py
sre-copilot/src/sre_copilot/guardrails/: __init__.py  engine.py  injection.py  pii.py
sre-copilot/src/sre_copilot/ingestion/: __init__.py  pipeline.py  sources.py
sre-copilot/src/sre_copilot/middleware/: __init__.py  auth.py  rate_limit.py
sre-copilot/src/sre_copilot/observability/: langfuse.py  otel.py
sre-copilot/src/sre_copilot/routers/: __init__.py  health.py  retrieval.py
sre-copilot/src/sre_copilot/schemas/: __init__.py  retrieval.py
sre-copilot/src/sre_copilot/services/: embeddings.py  llm_router.py  milvus_client.py  milvus_schema.py  redis_cache.py  retrieval.py
sre-copilot/src/sre_copilot/utils/: __init__.py  logger.py
sre-copilot/tests/: test_app.py  test_chunking.py  test_guardrails_engine.py  test_llm_router.py  test_rate_limit_and_auth.py  test_retrieval_api.py  test_retrieval_service_unit.py
